# fabro

./: Cargo.toml
.claude/skills/changelog/: watermark
apps/fabro-web/app/: router.tsx
apps/fabro-web/app/components/: graph-toolbar.tsx  interview-dock.tsx  stage-insights-sidebar.test.tsx  stage-insights-sidebar.tsx  steer-bar.tsx  ui.tsx
apps/fabro-web/app/hooks/: effects.ts
apps/fabro-web/app/layouts/: app-shell.tsx
apps/fabro-web/app/lib/: format.ts  graph-viewport.test.ts  (+4 more)
docker/split-web/: settings.toml
docs/internal/: react-effects-policy.md
docs/public/: docs.json
docs/public/agents/: mcp.mdx
docs/public/api-reference/: fabro-api.yaml
docs/public/changelog/: 2026-05-11.mdx  2026-05-12.mdx  2026-05-13.mdx  2026-05-14.mdx  2026-05-16.mdx  2026-05-17.mdx  2026-05-18.mdx
docs/public/core-concepts/: models.mdx
docs/public/execution/: outcomes.mdx
docs/public/integrations/: openrouter.mdx
docs/public/reference/: cli.mdx  sdk.mdx  user-configuration.mdx
docs/superpowers/plans/: 2026-05-10-auth-sessions-backend.md  2026-05-10-sandbox-services-frontend.md
lib/crates/build-support/: Cargo.toml  git_metadata.rs
lib/crates/fabro-cli/: Cargo.toml  build.rs
lib/crates/fabro-model/: Cargo.toml
lib/crates/fabro-model/src/: adapter.rs  billing.rs  catalog.rs  lib.rs  types.rs
lib/crates/fabro-model/src/catalog/providers/: anthropic.toml  gemini.toml  inception.toml  kimi.toml  litellm.toml  minimax.toml  ollama.toml  openai.toml  venice.toml  zai.toml
lib/crates/fabro-server/: Cargo.toml  build.rs
lib/crates/fabro-workflow/: Cargo.toml
(+121 files in other folders)
