[package]
name = "fabro-model"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true
description = "LLM model catalog: provider identity, model metadata, and resolution"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
fabro-static.workspace = true
http = "1"
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
